

Make compute table interface easier to use for simple operations
    (i.e., most of the time)

(done!) Entry type registry within entry type class
(done!) Monolithic CT -> static in compute_table class
(done!) Added CT to ct_entry_type, and inlined methods for find, add


    * eventually: remove CTs from operation base class
    * eventually: remove entry registration from operation base class


Operations:
    * Get rid of global operation registry in favor of global
      ct_entry_type registry, unless we can't?

Compute table ideas
    *   ct_vector   packing and unpacking operations
                    packing area is at most an unsigned long per item,
                    possibly plus one.

                    'none'
                        : just copy over
                    'type based'
                        : use slots of unsigned, each item (by type)
                          will use one or two slots
                    'value based'
                        : use slots of unsigned short, each item
                          will use 1-4 slots by value
                            0..2^16-1   1 slot
                             ..2^32-1   2 slots
                             ..2^48-1   3 slots
                             ..2^64-1   4 slots
                          but then we need 2 bits per item,
                          need to figure out where to store those.
                          Don't implement this yet but design
                          stuff so that adding this is not horrible.

        The packed version is what's stored, so we can check for
        equality very easily in the CT then
        (i.e., does that account for the time difference between
        ct_none and ct_typebased?)


Next release:

Reimplement operations.

Depending on how that goes, maybe adjust the operation hierarchy?

        some thoughts:
            operation
                |
                +--- binary_operation
                        |